--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ body {
   font-family: "Poppins", sans-serif;
 }
 .header {
+  padding-bottom: 40px;
   width: 100%;
-  height: 830px;
   background: #eeedde;
 }
 .container {
@@ -15,13 +15,12 @@ body {
 }
 .header .nav {
   width: 100%;
-  height: 100px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .header .nav .brand-name {
   width: 40%;
-  height: 100%;
 }
 .header .nav .brand-name p {
   font-family: "Roboto", sans-serif;
@@ -40,7 +39,6 @@ body {
 }
 .header .nav .menu {
   width: 60%;
-  height: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -61,7 +59,7 @@ body {
   color: #203239;
 }
 .banner {
-  padding-top: 100px;
+  padding-top: 50px;
   display: flex;
   justify-content: space-between;
 }
@@ -74,7 +72,6 @@ body {
 }
 .banner .banner-articles .banner-title {
   width: 777px;
-  height: 168px;
   padding: 12px 0;
   color: #203239;
 }
@@ -87,7 +84,6 @@ body {
 }
 .banner .banner-articles .banner-info {
   width: 544px;
-  height: 88px;
   padding: 14px 0;
   margin: 12px 0;
 }
@@ -99,29 +95,56 @@ body {
   color: rgba(32, 50, 57, 0.55);
 }
 .banner .banner-articles .banner-search {
+  margin-bottom: 20px;
   width: 675px;
   height: 70px;
   background: #ffffff;
   border-radius: 15px;
+  overflow: hidden;
+  position: relative;
 }
+.banner .banner-articles .banner-search input {
+  width: 100%;
+  box-sizing: border-box;
+  padding-left: 30px;
+  height: 100%;
+  border: none;
+  outline: none;
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
+}
+.banner .banner-articles .banner-search button {
+  padding: 10px 40px;
+  position: absolute;
+  left: 530px;
+  top: 50%;
+  background: #203239;
+  box-shadow: 0px 6px 8px rgba(32, 50, 57, 0.25);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  border-radius: 10px;
+  color: #ffffff;
+  transform: translateY(-50%);
+}
+
 .banner .achievement-items {
   display: flex;
   width: 590px;
-  height: 144px;
   justify-content: space-between;
 }
 .banner .achievement-items .achievement-item {
   width: 149px;
-  height: 144px;
 }
 .banner .achievement-items .achievement-item h2 {
   font-weight: 600;
   font-size: 56px;
-  line-height: 150%;
   margin: 0;
   padding: 0;
 }
 .banner .achievement-items .achievement-item p {
+  padding: 0;
+  margin: 0;
   font-weight: 300;
   font-size: 16px;
   line-height: 30px;
