--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,14 @@ body {
   width: 100%;
   height: 100%;
 }
+.service-section .service {
+  padding: 30px 0;
+}
+.service-section .service .title {
+  width: 533px;
+}
+.service-section .service .title h1 {
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 150%;
+}
