--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,10 @@ body {
   width: 100%;
   height: 100%;
 }
+.service-section {
+  padding: 100px 0;
+}
+
 .service-section .service {
   padding: 30px 0;
 }
@@ -253,4 +257,94 @@ body {
   .service-item
   .services-redmore:hover::before {
   transform: scaleX(1);
+}
+.residen-favorit-section {
+  width: 100%;
+  padding: 80px 0 150px;
+  background: #eeedde;
+}
+.residen-favorit-section .residen-favorit-title {
+  width: 100%;
+  text-align: left;
+  padding: 20px 0;
+}
+.residen-favorit-section .residen-favorit-title p {
+  margin: 0;
+  padding: 5px 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ff7527;
+}
+.residen-favorit-section .residen-favorit-title h1 {
+  margin: 0;
+  padding: 5px 0;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 150%;
+  color: #203239;
+}
+.residen-favorit-section .residen-favorit-showcase {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.residen-favorit-section .residen-favorit-showcase .image {
+  width: 45%;
+  position: relative;
+}
+.residen-favorit-section .residen-favorit-showcase .image img {
+  width: 100%;
+}
+.residen-favorit-section .residen-favorit-showcase .image .first-img {
+  width: 358px;
+  height: 490px;
+}
+.residen-favorit-section .residen-favorit-showcase .image .secound-img {
+  width: 330.91px;
+  height: 455px;
+  position: absolute;
+  left: 250px;
+  top: 100px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 100px rgba(0, 0, 0, 0.384);
+}
+.residen-favorit-section .residen-favorit-showcase .article {
+  width: 45%;
+}
+.residen-favorit-section .residen-favorit-showcase .article h1 {
+  margin: 20px 0;
+  width: 507px;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 150%;
+  color: #203239;
+}
+.residen-favorit-section .residen-favorit-showcase .article p {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 30px;
+  margin: 0;
+  padding: 20px 0;
+  color: #203239;
+}
+.residen-favorit-section .residen-favorit-showcase .article .contact {
+  width: 577px;
+  display: flex;
+  justify-content: space-between;
+}
+.residen-favorit-section .residen-favorit-showcase .article .contact a {
+  padding: 13px 41px;
+  border: 1px solid #203239;
+  border-radius: 10px;
+  text-decoration: none;
+  color: #000;
+}
+.residen-favorit-section .residen-favorit-showcase .article .contact .btn-one {
+  background: #eeedde;
+}
+.residen-favorit-section .residen-favorit-showcase .article .contact .btn-two {
+  background: #203239;
+  color: #ffffff;
 }
